[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2021"
homepage = "https://wasmer.io/"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wasmerio/wasmer-pack-tutorial"
rust-version = "1.64.0"                                       # Required for [workspace.package]
version = "0.0.0"