[package]
name = "tutorial-03"
version = "0.1.0"
edition = "2021"
description = "A basic geometry toolkit."

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wai-bindgen-rust = "0.2.0"

[package.metadata.wapm]
namespace = "wai"
abi = "none"
bindings = { wai-version = "0.2.0", exports = "geometry.wai" }
