[package]
name = "resources"
description = "A basic calculator"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[package.metadata.wapm]
namespace = "wai"
abi = "none"
bindings = { wai-version = "0.2.0", exports = "resources.wai" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wai-bindgen-rust = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
